Tests/CompilerTests/negative/synthetic-conformance.expected
negative/synthetic-conformance.hylo:20.1-6: error: no implementation of 'deinit'
given <X> Box<X>: Deinitializable {}
~~~~~
negative/synthetic-conformance.hylo:23.38-39: error: no implementation of 'deinit'
struct NotStructurallyDeinitializable: Deinitializable {
                                     ^
